fix: fix yellow background stretch

--- a/random-game/styles/main.css
+++ b/random-game/styles/main.css
@@ -12,7 +12,7 @@
 
 .container {
   display: flex;
-  height: 100vh;
+  align-items: stretch;
 }
 
 .left-bar {
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  min-height: 100vh;
   width: 500px;
   padding: 30px;
 }
